# katana

./: .buildinfo  .clang-format  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitmodules  .pylintrc  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  Python.md  README.md  bench_patch.patch  conda.yml  genindex.html  index.html  katana.yml  katana_new.yml  katana_requirements.yaml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
libava/: .gitignore  CMakeLists.txt  README.md
libava/manager/: CMakeLists.txt  gpu_example.conf  manager.cpp  manager.h  manager_service.fbs  run_worker.sh  spawn_daemon.cpp
libava/scripts/: gen_gpu_conf.py  generate.sh  setup.sh
libava/specs/: cuda_10_1.c
libgalois/: CMakeLists.txt
libgalois/src/: ArrowRandomAccessBuilder.cpp  Barrier.cpp  Barrier_Counting.cpp  Barrier_Dissemination.cpp  Barrier_MCS.cpp  Barrier_Pthread.cpp  Barrier_Simple.cpp  Barrier_Topo.cpp  BuildGraph.cpp  Context.cpp  Deterministic.cpp  DynamicBitset.cpp  EnvCheck.cpp  ErrorCode.cpp  FileGraph.cpp  FileGraphParallel.cpp  FileView.cpp  GaloisRT.cpp  GaloisRuntime.cpp  GraphHelpers.cpp  GraphML.cpp  GraphMLSchema.cpp  GraphTopology.cpp  HWTopo.cpp  HWTopoDarwin.cpp  HWTopoLinux.cpp  Mem.cpp  MemoryManager.cpp  MemoryPolicy.cpp  MemorySupervisor.cpp  NumaMem.cpp  OCFileGraph.cpp  OSMemoryNotify.cpp  OpLog.cpp  OutIndexView.cpp  PageAlloc.cpp  PagePool.cpp  ParaMeter.cpp  PerThreadStorage.cpp  PreAlloc.cpp  (+22 more)
libgalois/test/: CMakeLists.txt  README.md  TestPropertyGraph.h  TestTypedPropertyGraph.h  acquire.cpp  bandwidth.cpp  barriers.cpp  chembl-queries.txt  dynamic-bitset-unit.cpp  dynamic-bitset.cpp  empty-member-lcgraph.cpp  extra-traits.cpp  flatmap.cpp  floating-point-errors.cpp  foreach-bench.cpp  foreach.cpp  forward-declare-graph.cpp  gcollections.cpp  graph-compile.cpp  graph-predicates.cpp  graph.cpp  gslist.cpp  hwtopo.cpp  lock.cpp  lockmgr.cpp  loop-overhead.cpp  mem.cpp  morph-graph-removal.cpp  morph-graph.cpp  move.cpp  offset.cpp  oneach.cpp  os-memory.cpp  papi.cpp  pc.cpp  per-thread-storage.cpp  projection.cpp  property-file-graph-rdg-conversion.cpp  property-file-graph.cpp  property-graph-bench.cpp  (+29 more)
libgraph/: CMakeLists.txt
libgraph/src/: BuildGraph.cpp  EntityIndex.cpp  FileGraph.cpp  GraphHelpers.cpp  GraphML.cpp  GraphMLSchema.cpp  GraphTopology.cpp  HashIndexedProperty.cpp  Properties.cpp  PropertyGraph.cpp  PropertyGraphRetractor.cpp  PropertyIndex.cpp  PropertyViews.cpp  SharedMemSys.cpp  TopologyGeneration.cpp  TransformationView.cpp
libgraph/test/: CMakeLists.txt  TestTypedPropertyGraph.h  forward-declare-graph.cpp  graph-compile.cpp  graph-predicates.cpp  graph.cpp  morph-graph-removal.cpp  morph-graph.cpp  offset.cpp  projection.cpp  property-file-graph.cpp  property-graph-bench.cpp  property-graph-diff.cpp  property-graph-in-memory-props.cpp  property-graph-optional-topology-generation.cpp  property-graph-sorted-by-edgeprop-then-dest-view.cpp  property-graph-storage-format-version-v1-v3-entity-type-ids.cpp  property-graph-storage-format-version-v1-v3-optional-topologies.cpp  property-graph-storage-format-version-v3-v3-optional-topologies.cpp  property-graph-topology.cpp  property-graph-transposed-view.cpp  property-graph-undirected-view.cpp  property-graph.cpp  property-index.cpp  property-view.cpp  random-access-builder.cpp  storage-format-version-entity-type-ids.h  storage-format-version-optional-topologies.h  storage-format-version.h  transformation-view-optional-topology.cpp  verify-cdlp.cpp  verify-triangle-counting.cpp
libkatana_python_native/: CMakeLists.txt
libkatana_python_native/src/: EntityTypeManager.cpp  ErrorHandling.cpp  ImportData.cpp  PropertyGraph.cpp  RDGInterface.cpp  Reductions.cpp
libquery/: CMakeLists.txt  DBGraph.h  GraphSimulation.cpp  PythonGraph.cpp  PythonGraphReport.cpp  PythonGraphSimulation.cpp
libquery/src/: AttributedGraph.cpp  CypherCompiler.cpp  GraphSimulation.cpp  IndexableChunkedArray.cpp  KFHandler.cpp  LDBCReader.cpp  Matching.cpp  PythonGraph.cpp  PythonGraphQuery.cpp  PythonGraphReport.cpp  PythonGraphSimulation.cpp  SubgraphQuery.cpp
libsanitize/: CMakeLists.txt
libsanitize/libdisable_dlclose/: CMakeLists.txt
libsanitize/src/: dlclose.c
libsupport/: CMakeLists.txt
libsupport/src/: ArrowInterchange.cpp  ArrowVisitor.cpp  Backtrace.cpp  CommBackend.cpp  DynamicBitsetSlow.cpp  EntityTypeManager.cpp  Env.cpp  ErrorCode.cpp  Experimental.cpp  FileSystem.cpp  GetEnv.cpp  HTTP.cpp  HostAllocator.cpp  Http.cpp  JSON.cpp  JSONTracer.cpp  Logging.cpp  NoopTracer.cpp  Plugin.cpp  ProgressTracer.cpp  RDGVersion.cpp  Random.cpp  Result.cpp  Signals.cpp  Strings.cpp  TextTracer.cpp  URI.cpp  Uri.cpp
libsupport/test/: CMakeLists.txt  array-from-scalars.cpp  arrow-bench.cpp  arrow.cpp  bitmath.cpp  cache.cpp  disjoint_range_iterator.cpp  dynamic-bitset-slow.cpp  env.cpp  experimental.cpp  filesystem.cpp  getenv.cpp  logging.cpp  opaque-id.cpp  random.cpp  result-bench.cpp  result.cpp  signals.cpp  strings.cpp  tracing.cpp  type-manager.cpp  uri.cpp  zip_iterator.cpp
libtsuba/: CMakeLists.txt
libtsuba/fbs/: storage_operations.fbs
libtsuba/src/: AddProperties.cpp  AddProperties.h  AddTables.cpp  AddTables.h  AsyncOpGroup.cpp  AzureStorage.cpp  AzureStorage.h  Constants.h  EntityTypeManager.cpp  Errors.cpp  FaultTest.cpp  FileFrame.cpp  FileStorage.cpp  FileStorage.h  FileStorage_internal.h  FileView.cpp  GSStorage.cpp  GSStorage.h  GlobalState.cpp  GlobalState.h  HttpNameServerClient.cpp  HttpNameServerClient.h  LocalStorage.cpp  LocalStorage.h  MemoryNameServerClient.cpp  MemoryNameServerClient.h  NameServerClient.cpp  NameServerClient.h  ParquetReader.cpp  ParquetWriter.cpp  PartitionTopologyMetadata.cpp  PartitionTopologyMetadata.h  Preload.cpp  RDG.cpp  RDGCore.cpp  RDGCore.h  RDGHandleImpl.cpp  RDGHandleImpl.h  RDGInspection.cpp  RDGLineage.cpp  (+32 more)
libtsuba/test/: file-view.cpp  (+9 more)
lonestar/: CMakeLists.txt
python/: .gitignore  CMakeLists.txt  generate-from-jinja.py  generate_from_jinja.py  generator_conf.py  katana_setup.py  sitecustomize.py
(+1613 files in other folders)
